revised+conclusion+future work

--- a/document/BackMatter/Recomendations.tex
+++ b/document/BackMatter/Recomendations.tex
@@ -1,3 +1,16 @@
 \begin{recomendations}
-    Recomendaciones
+   % Recomendaciones
+
+   A partir del análisis de los resultados obtenidos, se considera que el texto producido por los 
+modelos presentados pudiera ser dotado de mayor fluidez. Agregar un mecanismo 
+para la generaci\'on y selección de expresiones de referencia, pudiera contribuir
+a \'esto, disminuyendo las repeticiones continuas del mismo nombre propio. 
+Aumentar el número de plantillas para distintos tipos de expresiones, 
+contribuiría a aumentar la variabilidad de los modelos.
+
+Se recomienda comparar el enfoque seguido en este trabajo, con un enfoque que busque abstraer  y hacer las representaciones generales
+intradisciplinarias. 
+
+
+
 \end{recomendations}
