--- a/document/BackMatter/Conclusions.tex
+++ b/document/BackMatter/Conclusions.tex
@@ -1,3 +1,21 @@
 \begin{conclusions}
-    Conclusiones
+    %Conclusiones   
+    En el presente trabajo se definió la propuesta de un sistema para la 
+generación de resúmenes de enfrentamientos deportivos, independiente de la fuente de datos del dominio, a
+patir del análisis de caracteristicas comunes del conjunto de los deportes de enfrentamiento.
+
+Se presentó una propuesta de meta esquema general con el cual definir la estructura de entrada de
+los datos al sistema y se validó que es posible, a partir de dicho esquema,  definir un esquema de representación individual por deporte. 
+El fútbol y el boxeo demostraron ser muestras útiles para la validación del sistema, por ser disciplinas muy diferentes en cuanto a su naturaleza de 
+ejecución y características.
+
+ Se logró diseñar dos sistemas capaces de generar reportes basados en los eventos de estas dos
+disciplinas deportivas. Los sistemas, basándose  en un enfoque simple de reglas y plantillas, mostraron variabilidad en distintas ejecuciones frente a los 
+mismos datos, fidelidad en la información representada en la salida  respecto a los datos de entrada y garantizaron la correcta estructura gramatical del
+texto producido. De esta forma, cumplieron con el requerimiento básico de los sistemas de generación de GLN funcionales.
+
+    
+
 \end{conclusions}
+
+
