--- a/document/MainMatter/Introduction.tex
+++ b/document/MainMatter/Introduction.tex
@@ -2,26 +2,25 @@
 \addcontentsline{toc}{chapter}{Introducción}
 
     Desde hace varios años la Inteligencia Artificial (IA) viene revolucionando e \\impactando significativamente en muchas esferas de la 
-vida del hombre. Dentro de la IA hay muchos campos de estudios y entre ellos el Procesamiento de Lenguaje Natural (PLN). Este abarca el conjunto de 
+vida del hombre. Dentro de la IA hay diversos campos de estudio entre los que se encuentra el Procesamiento de Lenguaje Natural (PLN). Este abarca el conjunto de 
 t\'ecnicas computacionales que tienen como objetivo el trabajo con lenguaje humano, incluyendo desde la extracci\'on de entidades en textos hasta modelos 
 de comprensi\'on y generación de textos. Tanto la generación de texto a texto (\emph{text-to-text}, en inglés) como la generación de 
-datos a texto (D2T por sus siglas en inglés, \emph{data-to-text} ) son instancias de la Generación de Lenguaje Natural. Reiter y Dale en (~\cite{Reiter1997BuildingAN}), 
-caracterizan la Generación de Lenguaje Natural (GLN) como el subcampo de la IA y la lingüística computacional que se ocupa de la construcción de sistemas informáticos que pueden 
+datos a texto (D2T por sus siglas en inglés, \emph{data-to-text} ) son instancias de la Generación de Lenguaje Natural (GLN). Reiter y Dale en (~\cite{Reiter1997BuildingAN}), 
+caracterizan la GLN como el subcampo de la IA y la lingüística computacional que se ocupa de la construcción de sistemas informáticos que pueden 
 producir textos comprensibles en inglés u otros idiomas humanos a partir de alguna representación no lingüística subyacente de la información. 
-Esta definición se adapta fácilmente a los sistemas cuya entrada consiste en datos. Como el presente trabajo está enfocado al trabajo a partir de datos, en lo siguiente, se 
-utiliza esta defiinición al referirse a los sistemas de GLN. 
+Esta definición se adapta fácilmente a los sistemas cuya entrada consiste en datos y es asumida en este trabajo para referirse a los sistemas de GLN. 
     
     Existe consenso en la forma en que la salida de un sistema de GLN debe presentarse: texto. Sin embargo no hay establecido un est\'andar en cuanto a la forma en 
 que se presentan los datos para su procesamiento, variando de un sistema a otro (~\cite{reiter_dale_2000,Gatt2018SurveyOT}). Como regla general el texto producido por estos sistemas 
-debe mantenar fidelidad a los datos que lo originan, así como debe ser consecuente con su intención comunicativa (~\cite{reiter_dale_2000}), no siendo lo mismo un 
+debe mantener fidelidad a los datos que lo originan y debe ser consecuente con su intención comunicativa (~\cite{reiter_dale_2000}), no siendo lo mismo un 
 sistema para la generación de diálogos que uno que tiene como objetivo describir resúmenes biográficos. Propuestas tempranas de sistemas como Ana (~\cite{kukich1983design}) para 
 generar reportes financieros, o como FoG (~\cite{goldberg1994using}), generador de reportes climáticos, comenzaron a mostrar las capacidades de estos 
-modelos a la hora dotar de interpretabilidad y relevancia datos que se presentaban de forma repetitiva y tediosa.
+modelos a la hora de dotar de interpretabilidad y relevancia datos que se presentaban de forma repetitiva y tediosa.
   
-    En un contexto donde la producción de datos se ha acelerado resultado de los avances tecnológicos y de los sistemas industriales, se ha hecho necesario para 
-las empresas el manejo y la interpretación de estos datos. Por esa raz\'on hay empresas que comenzaron a brindar estos servicios a otras (~\cite{dale2020natural}). Un ejemplo es la compañía 
+    En un contexto donde la producción de datos se ha acelerado como resultado de los avances tecnológicos y la digitalización de los sistemas industriales, se ha hecho necesario para 
+las empresas el manejo y la interpretación de los mismos. Por esa raz\'on algunas empresas se han especializado y han comenzado a brindar estos servicios a otras (~\cite{dale2020natural}). Un ejemplo es la compañía 
 \textit{Automated Insights\footnote[1]{https://automatedinsights.com/}} que ha enfocado su negocio en brindar soluciones a otras corporaciones con vista a automatizar sus 
-procesos de producción de texto. Entre los casos de uso clásicos de estas soluciones encontramos, en el marco del comercio electr\'onico, la generación de descripciones de 
+procesos de producción de texto. Entre los casos de uso clásico de estas soluciones encontramos, en el marco del comercio electr\'onico, la generación de descripciones de 
 productos a partir de sus fichas técnicas. El periodismo ha sido otra de las esferas beneficiadas de estos avances en la GLN. La generación automática de noticias (conocida como 
 periodismo robótico) está cada vez más extendida, al punto de que importantes editoriales como \textit{The Washington Post} han creado sus propios sistemas para la generación de 
 texto a partir de datos\footnote[2]{https://www.washingtonpost.com/pr/wp/2017/09/01/the-washington-post-leverages-heliograf-to-cover-high-school-football/}. 
@@ -30,20 +29,20 @@ cada semana.
 
     Por su carácter estadístico y su gran audiencia, el deporte es una de las esferas que se puede beneficiar claramente del desarrollo de los sistemas 
 de generación automática de texto. Muchos trabajos se han enfocado en este tema (~\cite{theune2001data, van2017pass, gunasiri2021automated,}).  Es relativamente sencillo encontrar en la web 
-los datos o tablas estadísticas de un determinado enfrementamiento deportivo, pero la gran variedad de eventos que se suceden constantemente hacen 
+los datos o tablas estadísticas de un determinado enfrentamiento deportivo, pero la gran variedad de eventos que se suceden constantemente hacen 
 que sea humanamente imposible darle cobertura a cada uno de ellos a nivel de narración y resumen. Por esta razón es importante el desarrollo 
-de sistemas que sean capaz de cubrir muchas esferas del deporte.
+de sistemas que sean capaces de cubrir muchas esferas del deporte.
 
 
    %\textbf{Problema}\\
 
     Aún con el desarrollo de los sistemas de GLN y su mayor asimilación en diversos ámbitos, siguen siendo absolutamente predominantes los 
-sistemas que tienen el inglés como idioma de referencia a la hora de generar el texto de la salida. En la literatura consultada no abundan las soluciones 
-en lenguaje español en este campo, entre otras razones influenciado esto por la mayor complejidad estructural del español como lenguaje, así como el menor número 
-de herramientas específicas para este. De la misma forma esto impacta directamente en los sistemas que tienen como objetivo comunicativo los eventos deportivos. Siendo el deporte un objeto de mucho interés en la 
+sistemas que tienen el inglés como idioma de referencia a la hora de generar el texto de salida. En la literatura consultada no abundan las soluciones 
+en lenguaje español en este campo, entre otras razones influenciado por la mayor complejidad estructural del español como lenguaje, así como el menor número 
+de herramientas específicas para éste. De la misma forma ésto impacta directamente en los sistemas que tienen como objetivo comunicativo los eventos deportivos. Siendo el deporte un objeto de mucho interés en la 
 comunidad hispanohablante en general y en Cuba en particular, se hace necesario ampliar los escenarios existentes desde esta perspectiva.
 
-    Los sistemas existentes en la literatura consultada en su mayoría se basan en un conocimiento explícito del dominio a tratar así como en una 
+    Los sistemas analizados en la literatura consultada en su mayoría se basan en un conocimiento explícito del dominio a tratar así como en una 
 estructuración predefinida de los datos en base al dominio. A su vez, son muchas las propuestas que parten de la obtención de los datos desde 
 la fuente como parte propia del sistema y no propiciados por el usuario. Son pocos los sistemas funcionales, fuera de la industria, capaces de 
 desacoplarse de las fuentes de datos y de abarcar desde una misma estructura distintos dominios.
@@ -55,46 +54,52 @@ desacoplarse de las fuentes de datos y de abarcar desde una misma estructura dis
 
     La propuesta del presente trabajo está motivada en las problemáticas anteriores. Siendo el deporte un campo que despierta tanto 
 interés y que es fuente de entretenimiento de muchas personas, sentar las bases del diseño de un sistema para la generación de resúmenes de 
-eventos deportivos es un reto estimulante. Así mismo este trabajo se presenta en el marco de las líneas de investigación existentes en el 
-grupo de Inteligencia Artificial de la Facultad de Matemática y Computación de la Universidad de La Habana(MATCOM). Servirá como base 
+eventos deportivos es un reto estimulante. Asímismo este trabajo se presenta en el marco de las líneas de investigación existentes en el 
+grupo de Inteligencia Artificial de la Facultad de Matemática y Computación de la Universidad de La Habana (MATCOM). Servirá como base 
 para futuros trabajos que sigan ampliando y profundizando en la GLN.
 
     La intención de adentrarse en la investigación de los sitemas de GLN dentro del departamento de IA de MATCOM comenzó con la propuesta, en 2019, 
-de realizar un modelo GLN capaz de dar cobertura a las actuaciones destacadas de los peloteros cubanos en la Grandes Ligas de Béisbol. La misma derivó 
-en el trabajo de tesis de Roberto Balboa González (~\cite{balboa2020}). Este primer acercamiento a la GLN sirvió para buscar nuevos escenarios a abracar 
-desde el punto de vista de esta disciplina. El resto de antecedentes vienen enmarcados en el estudio de la literatura y de los sitemas existentes dentro del campo de la GLN que 
+de realizar un modelo GLN capaz de dar cobertura a las actuaciones destacadas de los peloteros cubanos en las Grandes Ligas de Béisbol. La misma derivó 
+en el trabajo de tesis de Roberto Balboa González (~\cite{balboa2020}). Este primer acercamiento a la GLN sirvió para buscar nuevos escenarios a abarcar 
+desde el punto de vista de esta disciplina. El resto de los antecedentes vienen enmarcados en el estudio de la literatura y de los sistemas existentes dentro del campo de la GLN que 
 se presentan en un capítulo posterior.
 
-    
-    Partiendo de la hipótesis de que es posible definir un esquema general para la definición de los eventos deportivos, en el presente trabajo
-se presenta un prototipo de sistema capaz de generar resúmenes de eventos deportivos a partir de los datos prove\'idos por 
-el usuario. Se utiliza el futbol y el boxeo como muestras para validar la propuesta. 
+A pesar de los avances indiscutibles en el campo de la GLN queda aún mucho por hacer. Se considea que es interesante ampliar los sistemas que den cobertura informativa a los eventos 
+deportivos en idioma español. Además, es motivante crear un diseño que pueda servir dentro del grupo de IA de MATCOM como antesala de futuras investigaciones y aplicaciones.
 
-    Un sistema de este tipo tiene diversos casos de uso, y entre otros, sirve para dar descripción a eventos de interés de un 
-determinado público que pudieran quedar fuera de la cobertura noticiosa de los medios de prensa. En cualquier otro escenario, 
-su utilidad queda marcada por las necesidad que quieran cubrir sus usurios, con la única condición de poseer los datos.
-\\
+
+Teniendo en cuenta estos antecedentes, y partiendo de la hipótesis de que es posible definir un esquema general para representar los datos que describen los enfrentamientos deportivos,
+se arriba al objetivo del presente trabajo.\\
+
+%se presenta un prototipo de sistema capaz de generar resúmenes de eventos deportivos a partir de los datos prove\'idos por 
+%el usuario. Se utiliza el futbol y el boxeo como muestras para validar la propuesta. 
+
+    %Un sistema de este tipo tiene diversos casos de uso, y entre otros, sirve para describir eventos de interés para un 
+%determinado público que pudieran quedar fuera de la cobertura noticiosa de los medios de prensa. En cualquier otro escenario, 
+%su utilidad queda marcada por las necesidades que quieran cubrir sus usuarios, con la única condición de poseer los datos.
 
     \textbf{Objetivo}\\
 
-    El objetivo general de este trabajo es la propuesta de diseño de un sistema funcional para la generación de res\'umenes de eventos deportivos 
-independientes de la fuente de datos del dominio. A partir de dicho diseño se presenta dos modelos capaces de generar resúmenes de partidos de 
-fútbol y combates de boxeo. 
+    Proponer el diseño de un sistema para la generación de res\'umenes o reportes de eventos deportivos 
+independiente de la fuente de datos del dominio, utilizando como muestras para la validación el fútbol y el boxeo.
+%A partir de dicho diseño se presentan dos modelos capaces de generar resúmenes de partidos de 
+%fútbol y combates de boxeo. 
+
 
     Para la consecución del objetivo es necesario:
 
     \begin{itemize}
-        \item Estudiar detalladamente la literatura relacionada con la GLN y determinar los enfoques factibles.
-        \item Analizar el dominio y determinar características comunes de los eventos deportivos
+        %\item Estudiar la literatura relacionada con la GLN y determinar los enfoques factibles.
+        \item Analizar el dominio y determinar características comunes y relevantes de los eventos deportivos.
         \item Crear un esquema general a partir del cual poder definir esquemas específicos para la entrada de datos de los distintos deportes.
         \item Diseñar un sistema para la generación de resúmenes.
         \item Validar la propuesta con dos modelos de generación de texto basados en reglas y plantillas para el fútbol y el boxeo.   
     \end{itemize}
 
     %\begin{itemize}
-    %    \item Estudiar detalladamente la literatura relacionada con la GLN y determinar los enfoques factibles. 
+    %    \item Estudiar la literatura relacionada con la GLN y determinar los enfoques factibles. 
     %    \item Comprobar los sistemas de generación relacionados con el dominio (eventos deportivos) y sus caracter\'isticas.
-    %    \item Estudiar en profundidad el dominio, y determinar los rasgos distintivos y comunes entre los eventos deportivos.
+    %    \item Estudiar el dominio, y determinar los rasgos distintivos y comunes entre los eventos deportivos.
     %    \item Diseñar un esquema de eventos comunes característicos entre los deportes que de lugar a un esquema específico de cada uno.
     %    \item Plantear una estructura intermedia para el ingreso de los datos en base al esquema general diseñado. 
     %    \item Diseñar e implementar los modelos generadores de texto.
@@ -106,4 +111,4 @@ fútbol y combates de boxeo.
     El resto del trabajo se organiza de la siguiente manera. El capítulo 1 aborda los problemas generales de los sistemas de GLN 
 y las distinas técnicas relevantes en la literatura para su solución. En el capítulo 2 se presenta el diseño del modelo a implementar, mientras 
 que en el capítulo 3 se analizan los detalles de la implementación y los resultados. El trabajo concluye con la presentación de las 
-conclusiones y recomendaciones para futuros trabjos.
+conclusiones y recomendaciones.
