--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -96,6 +96,7 @@
 \include{MainMatter/Introduction}
 \include{MainMatter/Background}
 \include{MainMatter/Proposal}
+\include{MainMatter/Validation}
 \include{MainMatter/Implementation}
 
 \backmatter
