--- a/document/MainMatter/Proposal.tex
+++ b/document/MainMatter/Proposal.tex
@@ -153,6 +153,8 @@ También se debe determinar una expresión temporal que identifique de forma ún
 modelos interpreten los mismos.
 
     Los datos referentes a la sede, el público, el torneo, el resultado, las categorías se expresan de forma más directa. Queda en decisión del realizador del esquema y su modelo específico, 
-determinar que informaciones constituyen un requerimiento en el contexto de la generación del resumen y cuales son meros complementos informativos y como tal el sistema tiene 
+determinar que informaciones constituyen un requerimiento en el contexto de la generación del resumen y cuales son complementos informativos y como tal el sistema tiene 
 capacidad de lidiar con su ausencia. 
+
+
 
